infrastructure/node-main/tests/03-ingress-http-test-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-http-test
  namespace: media
  labels:
    app.kubernetes.io/name: ingress-http-test
    app.kubernetes.io/part-of: media-stack
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: ingress-http-test
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
