infrastructure/node-main/tests/04-ingress-http-test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-http-test
  labels:
    app.kubernetes.io/name: ingress-http-test
spec:
  ingressClassName: traefik
  rules:
    - host: ingress-test.home.arpa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ingress-http-test
                port:
                  name: http
